イベントIDの統一化とフランスのヨーロッパ保護領独立イベントに関する修正

--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -239,55 +239,55 @@
  JAP_The_commander_of_Operation_Ichi-Go:0 "一号作戦の指揮官"
 
 #イベント
- geacps_JAP.1.t:0 "大日本帝國"
- geacps_JAP.1.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。"
- geacps_JAP.1.a:0 "天皇陛下万歳！大日本帝国万歳！"
- geacps_JAP.2.t:0 "一・二二事件"
- geacps_JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、武装した海軍青年士官らが徒党を組み、帝都にてクーデターを起こした。\n本件で標的にされた東條英機首相は、銃撃され重体になられた..."
- geacps_JAP.2.a:0 "叛乱軍を捕らえよ！"
- geacps_JAP.3.t:0 "臨時代理"
- geacps_JAP.3.d:0 "一・二二事件と未だに続く志那事変の対処の為にも、臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
- geacps_JAP.3.a:0 "東條の腹心の安藤紀三郎に"
- geacps_JAP.3.b:0 ""欠点がない"重光葵に"
- geacps_JAP.4.t:0 "重臣会議"
- geacps_JAP.4.d:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
- geacps_JAP.4.a:0 "奏薦されたのは陸軍将校だ！"
- geacps_JAP.4.b:0 "いいや、海軍士官が奏薦された！"
- geacps_JAP.4.c:0 "軍部の意見なんぞ無視してしまえ..."
- geacps_JAP.5.t:0 "閣議"
- geacps_JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が行われた。\n内務大臣の安藤紀三郎は戒嚴令の施行を主張したが、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的に速やかな鎮圧を望んでいる昭和天皇の意向を受け、戒嚴令の施行は決定された。"
- geacps_JAP.5.a:0 "決まりだな"
- geacps_JAP.6.t:0 "海軍士官の裁判"
- geacps_JAP.6.d:0 "D"
- geacps_JAP.6.a:0 "公正な判決を下す"
- geacps_JAP.6.b:0 "臣民が助命嘆願運動を行っている..."
- geacps_JAP.7.t:0 "農本主義者を逮捕"
- geacps_JAP.7.d:0 "D"
- geacps_JAP.7.a:0 "全国の農本主義者達の思想を"保護観察"しよう"
- geacps_JAP.7.b:0 "投獄でもしておけ"
- geacps_JAP.8.t:0 "皇道派将校の裁判"
- geacps_JAP.8.d:0 "D"
- geacps_JAP.8.a:0 "公正な判決なんてもんはない"
- geacps_JAP.8.b:0 "もしかしたら..."
+ JAP.1.t:0 "大日本帝國"
+ JAP.1.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。"
+ JAP.1.0:0 "天皇陛下万歳！大日本帝国万歳！"
+ JAP.2.t:0 "一・二二事件"
+ JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、武装した海軍青年士官らが徒党を組み、帝都にてクーデターを起こした。\n本件で標的にされた東條英機首相は、銃撃され重体になられた..."
+ JAP.2.0:0 "叛乱軍を捕らえよ！"
+ JAP.3.t:0 "臨時代理"
+ JAP.3.d:0 "一・二二事件と未だに続く志那事変の対処の為にも、臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
+ JAP.3.0:0 "東條の腹心の安藤紀三郎に"
+ JAP.3.1:0 ""欠点がない"重光葵に"
+ JAP.4.t:0 "重臣会議"
+ JAP.4.d:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
+ JAP.4.0:0 "奏薦されたのは陸軍将校だ！"
+ JAP.4.1:0 "いいや、海軍士官が奏薦された！"
+ JAP.4.2:0 "軍部の意見なんぞ無視してしまえ..."
+ JAP.5.t:0 "閣議"
+ JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が行われた。\n内務大臣の安藤紀三郎は戒嚴令の施行を主張したが、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的に速やかな鎮圧を望んでいる昭和天皇の意向を受け、戒嚴令の施行は決定された。"
+ JAP.5.0:0 "決まりだな"
+ JAP.6.t:0 "海軍士官の裁判"
+ JAP.6.d:0 "D"
+ JAP.6.0:0 "公正な判決を下す"
+ JAP.6.1:0 "臣民が助命嘆願運動を行っている..."
+ JAP.7.t:0 "農本主義者を逮捕"
+ JAP.7.d:0 "D"
+ JAP.7.0:0 "全国の農本主義者達の思想を"保護観察"しよう"
+ JAP.7.1:0 "投獄でもしておけ"
+ JAP.8.t:0 "皇道派将校の裁判"
+ JAP.8.d:0 "D"
+ JAP.8.0:0 "公正な判決なんてもんはない"
+ JAP.8.1:0 "もしかしたら..."
  
- geacps_JAP.100.t:0 "武漢作戦"
- geacps_JAP.100.d:0 "武漢作戦"
- geacps_JAP.100.a:0 "祝武漢入城"
+ JAP.100.t:0 "武漢作戦"
+ JAP.100.d:0 "武漢作戦"
+ JAP.100.0:0 "祝武漢入城"
  
- geacps_JAP.001.title:0 "海軍を主導する人材の選定"
- geacps_JAP.001.desc:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
- geacps_JAP.001.a:0 "航空主兵主義者を据え置く"
- geacps_JAP.001.b:0 "大艦巨砲主義者を再び"
- geacps_JAP.001.c:0 "夜戦第一主義者を探し出す"
- geacps_JAP.002.title:0 "[GetYear]年国策研究大綱"
- geacps_JAP.002.desc:0 "新たな国策研究の方針を立てなければいけない"
- geacps_JAP.002.a:0 "軍事研究"
- geacps_JAP.002.b:0 "民間研究"
- geacps_JAP.003.title:0 "[GetYear]年国策研究大綱"
- geacps_JAP.003.desc:0 "軍事研究の促進において特に重視すべきことはなんであるか。"
- geacps_JAP.003.a:0 "陸軍"
- geacps_JAP.003.b:0 "海軍"
- geacps_JAP.003.c:0 "空軍"
+ JAP.001.t:0 "海軍を主導する人材の選定"
+ JAP.001.d:0 "太平洋戦争では今までの戦争とは打って変わった戦法も重要であることが分かった。これらのことを踏まえ、我々はこれからの時代の帝国艦隊を率いていく人材を選定する必要がある。これは国家の存亡にかかわる重大な事案であり、慎重に考えなければならない・・・"
+ JAP.001.0:0 "航空主兵主義者を据え置く"
+ JAP.001.1:0 "大艦巨砲主義者を再び"
+ JAP.001.2:0 "夜戦第一主義者を探し出す"
+ JAP.002.t:0 "[GetYear]年国策研究大綱"
+ JAP.002.d:0 "新たな国策研究の方針を立てなければいけない"
+ JAP.002.0:0 "軍事研究"
+ JAP.002.1:0 "民間研究"
+ JAP.003.t:0 "[GetYear]年国策研究大綱"
+ JAP.003.d:0 "軍事研究の促進において特に重視すべきことはなんであるか。"
+ JAP.003.0:0 "陸軍"
+ JAP.003.1:0 "海軍"
+ JAP.003.2:0 "空軍"
 
 #ディシジョン
  JAP_Coup_detat_in_the_offing:0 "クーデターの予感"
