--- a/localisation/english/countries_europe/geacps_HUN_l_english.yml
+++ b/localisation/english/countries_europe/geacps_HUN_l_english.yml
@@ -12,6 +12,6 @@
 #イベント
  HUN.0.t:0 "ドナウ連邦構想"
  HUN.0.d:0 "A"
- HUN.0.a:0 "一度こわしたら二度ともとに戻ることはない..."
- HUN.0.b:0 "中欧諸国の経済力は脆弱なため、社会民主的経済共同体を作るべきである。"
- HUN.0.c:0 "中欧諸国の経済力は脆弱なため、権威民主的経済共同体を作るべきである。"
+ HUN.0.0:0 "一度こわしたら二度ともとに戻ることはない..."
+ HUN.0.1:0 "中欧諸国の経済力は脆弱なため、社会民主的経済共同体を作るべきである。"
+ HUN.0.2:0 "中欧諸国の経済力は脆弱なため、権威民主的経済共同体を作るべきである。"
