--- a/localisation/english/countries_europe/geacps_ROM_l_english.yml
+++ b/localisation/english/countries_europe/geacps_ROM_l_english.yml
@@ -10,7 +10,7 @@
  
 
 #イベント
- geacps_ROM.1.t:0 "12月革命"
- geacps_ROM.1.d:0 "A"
- geacps_ROM.1.a:0 "全ての権力を共産党に..."
- geacps_ROM.1.b:0 "王に力を"
+ ROM.1.t:0 "12月革命"
+ ROM.1.d:0 "A"
+ ROM.1.0:0 "全ての権力を共産党に..."
+ ROM.1.1:0 "王に力を"
