--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -454,8 +454,8 @@
  STATE_453:0 "シナイ"
  STATE_454:0 "パレスチナ"
  STATE_455:0 "ヨルダン"
- STATE_456:0 "アスワン"
- STATE_457:0 "東部砂漠"
+ STATE_456:0 "上エジプト"
+ STATE_457:0 "紅海沿岸"
  STATE_458:0 "チュニジア"
  STATE_459:0 "アルジェ"
  STATE_460:0 "コンスタンティーヌ"
@@ -1340,3 +1340,4 @@
  STATE_1339:0 "ツヒンヴァリ"
  STATE_1340:0 "ノヴァヤゼムリャ"
  STATE_1341:0 "ヤンマイエン島"
+ STATE_1342:0 "中エジプト"
