--- a/localisation/english/replace/_geacps_loading_tips_l_english.yml
+++ b/localisation/english/replace/_geacps_loading_tips_l_english.yml
@@ -94,7 +94,7 @@
  LOADING_TIP_92: "足元を踏みしめる大地のみならず、岸辺を洗う湖水のみならず、頭上にざわめく大空も我が祖国である。\n- カール・グスタフ・エミール・マンネルヘイム"
  LOADING_TIP_93: "我々は奪われたものを奪い返す。\n- ウラジーミル・レーニン"
  LOADING_TIP_94: "自分の守護者から自分を守ってくれるのは誰なのか？\n- デキムス・ユニウス・ユウェナリス"
- LOADING_TIP_95: "\n- "
+ LOADING_TIP_95: "過去に目を閉ざす者は、現在に対してもやはり盲目となる。\n- リヒャルト・フォン・ヴァイツゼッカー"
  LOADING_TIP_96: "\n- "
  LOADING_TIP_97: "\n- "
  LOADING_TIP_98: "\n- "
