プロヴィの存在しなかった島々を実装

--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -469,8 +469,8 @@
  STATE_468:0 "セント・ローレンス"
  STATE_469:0 "サスカチュワン"
  STATE_470:0 "アルバータ"
- STATE_471:0 "カナダ北西部"
- STATE_472:0 "カナダ北部"
+ STATE_471:0 "ユーコン"
+ STATE_472:0 "ノースウェスト"
  STATE_473:0 "ブリティッシュコロンビア"
  STATE_474:0 "ユカタン"
  STATE_475:0 "チアパス"
@@ -690,7 +690,7 @@
  STATE_689:0 "ジャマイカ"
  STATE_690:0 "バハマ北部"
  STATE_691:0 "トリニダード"
- STATE_692:0 "ウィンドワード諸島"
+ STATE_692:0 "バルバドス島"
  STATE_693:0 "バハマ南部"
  STATE_694:0 "グアドループ島"
  STATE_695:0 "キュラソー"
@@ -724,7 +724,7 @@
  STATE_723:0 "南島"
  STATE_724:0 "タイ南部"
  STATE_725:0 "ナウル"
- STATE_726:0 "サモア"
+ STATE_726:0 "西サモア"
  STATE_727:0 "ライン諸島"
  STATE_728:0 "広州湾"
  STATE_729:0 "マカオ"
@@ -1340,4 +1340,19 @@
  STATE_1339:0 "ツヒンヴァリ"
  STATE_1340:0 "ノヴァヤゼムリャ"
  STATE_1341:0 "ヤンマイエン島"
- STATE_1342:0 "中エジプト"
+ STATE_1342:0 "エジプト中部"
+ STATE_1343:0 "トンガ"
+ STATE_1344:0 "東サモア"
+ STATE_1345:0 "ニュージーランド亜南極諸島"
+ STATE_1346:0 "チャタム諸島"
+ STATE_1347:0 "ノーフォーク島"
+ STATE_1348:0 "イースター島"
+ STATE_1349:0 "トケラウ諸島"
+ STATE_1350:0 "スウェインズ島"
+ STATE_1351:0 "ウベア及びフツナ諸島"
+ STATE_1352:0 "ニウエ島"
+ STATE_1353:0 "クック諸島"
+ STATE_1354:0 "ハード島及びマクドナルド諸島"
+ STATE_1355:0 "ケルマディック諸島"
+ STATE_1356:0 "ジャービス島"
+ STATE_1357:0 "ブーベ島"
