--- a/localisation/english/_map/countries_colony_l_english.yml
+++ b/localisation/english/_map/countries_colony_l_english.yml
@@ -2817,6 +2817,18 @@
  NGU_mandated_territory_C_DEF:0 "$OVERLORDADJ$委任統治領$NONIDEOLOGY$地域"
  NGU_mandated_territory_C_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
+ NIU_dominion:0 "$NONIDEOLOGY$島自治領"
+ NIU_dominion_DEF:0 "$NONIDEOLOGY$島自治領"
+ NIU_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$島植民地"
+ NIU_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ NIU_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$島"
+ NIU_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$島"
+ NIU_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$島"
+ NIU_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$島"
+ NIU_protected_territory:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ NIU_protected_territory_DEF:0 "$OVERLORDADJ$保護領$NONIDEOLOGY$"
+ NIU_protected_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ 
  NMR_dominion:0 "$NONIDEOLOGY$自治領"
  NMR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
  NMR_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
@@ -2897,6 +2909,9 @@
  VUT_overseas_territory:0 "$OVERLORDADJ$領ニューヘブリディーズ"
  VUT_overseas_territory_DEF:0 "$OVERLORDADJ$領ニューヘブリディーズ"
  VUT_overseas_territory_ADJ:0 "$OVERLORDADJ$領ニューヘブリディーズ"
+ VUT_condominium:0 "共同統治領ニューヘブリディーズ"
+ VUT_condominium_DEF:0 "共同統治領ニューヘブリディーズ"
+ VUT_condominium_ADJ:0 "ニューヘブリディーズ"
  
 ##コズメティック
 #アジア
