--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -2,10 +2,10 @@
 #国家方針
  JAP_1-22_Incident:0 "一・二二事件"
  JAP_1-22_Incident_desc:0 "憲兵の情報によると、帝國における反政府運動が激化しようとしているらしい。\n具体的にどの様な人物、もしくは組織が裏に潜んでいるかの情報は掴めてはいないものの、帝都の占拠の後、政府首脳・重臣への襲撃を計画しているらしい。\nこの馬鹿馬鹿しい計画に対し、どの様に行動すべきだろうか？"
- JAP_Organise_a_meeting_of_the_chief_ministers:0 "重臣会議を開催する"
- JAP_Organise_a_meeting_of_the_chief_ministers_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一\n大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎\n海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
- JAP_Cabinet_meeting:0 "閣議を開く"
- JAP_Cabinet_meeting_desc:0 "一・二二事件を受けて各国務大臣を招集して閣議を開き、当案件に対し早急に対応しなければならない。"
+ JAP_senior_statesmen's_conference:0 "重臣会議を開催する"
+ JAP_senior_statesmen's_conference_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一\n大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎\n海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
+ JAP_cabinet_meeting:0 "閣議を開く"
+ JAP_cabinet_meeting_desc:0 "一・二二事件を受けて各国務大臣を招集して閣議を開き、当案件に対し早急に対応しなければならない。"
  JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
  JAP_Declaration_of_martial_law_desc:0 "賊軍に対する迅速対処の為、昭和天皇による戒嚴令の施行を支持を頂いた後に宣告を行う必要がある。"
  JAP_Trial_of_naval_officers:0 "海軍士官の裁判"
@@ -15,12 +15,14 @@
  JAP_Trial_of_Imperialist_officers:0 "皇道派将校の裁判"
  JAP_Trial_of_Imperialist_officers_desc:0 "忌々しい皇道派は未だに息を潜めている事は明確であろう。\nしかし、何であろうとクーデターを起こした賊軍は処罰されなければならない。"
  JAP_Stability_of_the_situation:0 "事態の安定"
- JAP_Stability_of_the_situation_desc:0 "一時的な安定は保たれたものの、これは”終わり”では無く”始まり”だ。"
- JAP_Lugou_Bridge_Incident:0 "盧溝橋事件"
- JAP_Nanjing_Tips:0 "南京攻略戦"
- JAP_Wuhan_Battle:0 "武漢作戦"
- JAP_Chongqing_Battle:0 "重慶作戦"
- JAP_Triumphant:0 "凱旋だ！"
+ JAP_Stability_of_the_situation_desc:0 "一時的な安定は保たれたものの、これは”終わり”では無く”始まり”なのかもしれない..."
+ 
+ JAP_Marco_Polo_Bridge_Incident:0 "盧溝橋事件"
+ JAP_Battle_of_Nanking:0 "南京攻略戦"
+ JAP_Capture_of_Wuhan:0 "武漢作戦"
+ JAP_Capture_of_Chongqing:0 "重慶作戦"
+ JAP_triumphant:0 "凱旋だ！"
+ 
  JAP_Keisuke_Okada:0 "岡田啓介"
  JAP_1:0 ""
  JAP_2:0 ""
@@ -498,3 +500,6 @@
  JAP_impending_zveno_coup:0 "[GetZvenoCoupTitle]"
  JAP_impending_zveno_coup_desc:0 "[GetZvenoCoupDesc]"
  JAP_impending_zveno_coup_size_tt:0 "[GetZvenoName]支持者が内戦を開始する。\nズヴェノの軍の規模はズヴェノの支持率に比例する。"
+ 
+#ツールチップ
+ JAP_occurrence_of_1-22_Incident:0 "§R一・二二事件が起きようとしている...§!"
