現地語名称システム用地名追加、サブイデオロギーの追加、南スラブ諸王国の国旗実装

--- a/localisation/english/generic/_geacps_ideologies_l_english.yml
+++ b/localisation/english/generic/_geacps_ideologies_l_english.yml
@@ -7,6 +7,12 @@
  total_socialism_acceptance:0 "全体社会主義者との外交の容認"
  total_socialism_ideology:0 "全体社会主義"
  total_socialism_ideology_desc:0 ""
+ stalinism_ideology:0 "スターリン主義"
+ stalinism_ideology_desc:0 "スターリン主義とは個人崇拝、暴力的対外政策、恐怖政治や大規模な粛清を特徴とし、スターリン自身はマルクス・レーニン主義と呼んだ全体主義である。"
+ trotskyism_ideology:0 "トロツキー主義"
+ trotskyism_ideology_desc:0 ""
+ bukharinism_ideology:0 "ブハーリン主義"
+ bukharinism_ideology_desc:0 ""
 
 #Radical Socialism
  radical_socialism:0 "急進社会主義"
@@ -70,3 +76,5 @@
  national_populism_acceptance:0 "国家大衆主義者との外交の容認"
  national_populism_ideology:0 "国家大衆主義"
  national_populism_ideology_desc:0 ""
+ national_socialism_ideology:0 "国民社会主義"
+ national_socialism_ideology_desc:0 "かつてドイツにこの主義を掲げた与党があった。しかし先の大戦を引き起こし世界から忌み嫌われることとなった。"
