--- a/localisation/english/_map/_geacps_state_names_l_english.yml
+++ b/localisation/english/_map/_geacps_state_names_l_english.yml
@@ -2,18 +2,18 @@
  STATE_1:0 "コルシカ"
  STATE_2:0 "ラツィオ"
  STATE_3:0 "ベルン"
- STATE_4:0 "ニーダーエスターライヒ"
+ STATE_4:0 "低地オーストリア"
  STATE_5:0 "ヴァルミア＝マズールィ"
- STATE_6:0 "フランデレン"
+ STATE_6:0 "フランドル"
  STATE_7:0 "ホラント"
  STATE_8:0 "ルクセンブルク"
  STATE_9:0 "ボヘミア"
  STATE_10:0 "ワルシャワ"
- STATE_11:0 "アウクシュタイティヤ"
+ STATE_11:0 "カウナス"
  STATE_12:0 "ヴィドゼメ"
  STATE_13:0 "サーレマー島"
  STATE_14:0 "ブルターニュ"
- STATE_15:0 "バス＝ノルマンディー"
+ STATE_15:0 "低地ノルマンディー"
  STATE_16:0 "イル＝ド＝フランス"
  STATE_17:0 "フランシュ＝コンテ"
  STATE_18:0 "シャンパーニュ＝アルデンヌ"
@@ -37,7 +37,7 @@
  STATE_36:0 "北オランダ"
  STATE_37:0 "シェラン"
  STATE_38:0 "ノールランド"
- STATE_39:0 "トレンティーノ＝アルト・アディジェ"
+ STATE_39:0 "南チロル及び上アディジェ"
  STATE_40:0 "アルタイ"
  STATE_41:0 "カスティージャ・ラ・ヌエバ"
  STATE_42:0 "プファルツ"
@@ -64,8 +64,8 @@
  STATE_63:0 "ポモージェ・ティルネ"
  STATE_64:0 "ブランデンブルク"
  STATE_65:0 "ザクセン"
- STATE_66:0 "ドルヌィ・シロンスク"
- STATE_67:0 "ゴルヌィ・シロンスク"
+ STATE_66:0 "下シレジア"
+ STATE_67:0 "上シレジア"
  STATE_68:0 "ルブシュ"
  STATE_69:0 "ウースチー"
  STATE_70:0 "スロバキア西部"
@@ -75,7 +75,7 @@
  STATE_74:0 "オパヴァ"
  STATE_75:0 "モラヴィア"
  STATE_76:0 "北トランシルヴァニア"
- STATE_77:0 "南ドブロジャ"
+ STATE_77:0 "南ドブルジャ"
  STATE_78:0 "ベッサラビア"
  STATE_79:0 "モルドヴァ"
  STATE_80:0 "チェルニウツィー"
@@ -94,7 +94,7 @@
  STATE_93:0 "ヴォルィーニ"
  STATE_94:0 "ブレスト"
  STATE_95:0 "フロドナ"
- STATE_96:0 "キエフ市"
+ STATE_96:0 "キーウ都市部"
  STATE_97:0 "ビャウィストク"
  STATE_98:0 "プウォツク"
  STATE_99:0 "ユトランド"
@@ -104,7 +104,7 @@
  STATE_103:0 "ダルマチア"
  STATE_104:0 "ボスニア"
  STATE_105:0 "モンテネグロ"
- STATE_106:0 "マケドニア"
+ STATE_106:0 "北マケドニア"
  STATE_107:0 "セルビア"
  STATE_108:0 "モラヴァ"
  STATE_109:0 "クロアチア"
@@ -150,7 +150,7 @@
  STATE_149:0 "ポフヤンマー"
  STATE_150:0 "サヴォ"
  STATE_151:0 "グリシュン"
- STATE_152:0 "オーバーエスターライヒ"
+ STATE_152:0 "高地オーストリア"
  STATE_153:0 "北チロル"
  STATE_154:0 "ハンガリー大平原北部"
  STATE_155:0 "ドナウ川西岸"
@@ -161,7 +161,7 @@
  STATE_160:0 "ヴェネト"
  STATE_161:0 "エミリア・ロマーニャ"
  STATE_162:0 "トスカーナ"
- STATE_163:0 "ザラ"
+ STATE_163:0 "ザダル"
  STATE_164:0 "ドデカネス"
  STATE_165:0 "カタルーニャ"
  STATE_166:0 "アラゴン西部"
@@ -181,26 +181,26 @@
  STATE_180:0 "ポルト"
  STATE_181:0 "グアルダ"
  STATE_182:0 "クレタ"
- STATE_183:0 "キプロス"
+ STATE_183:0 "キプロス島"
  STATE_184:0 "西トラキア"
  STATE_185:0 "イピロス"
  STATE_186:0 "ペロポネソス"
  STATE_187:0 "エーゲ海諸島"
- STATE_188:0 "メーメル"
- STATE_189:0 "ジェマイティヤ"
+ STATE_188:0 "クライペダ"
+ STATE_189:0 "低地リトアニア"
  STATE_190:0 "クルゼメ"
  STATE_191:0 "タルトゥ"
  STATE_192:0 "オデッサ"
  STATE_193:0 "チェルニーヒウ"
  STATE_194:0 "ホメリ"
- STATE_195:0 "レニングラード市"
+ STATE_195:0 "レニングラード"
  STATE_196:0 "ヘルソン"
  STATE_197:0 "ムィコラーイウ"
  STATE_198:0 "ヴィーンヌィツャ"
  STATE_199:0 "フメリニツキー"
  STATE_200:0 "ザポリージャ"
  STATE_201:0 "ジトーミル"
- STATE_202:0 "キエフ"
+ STATE_202:0 "キーウ"
  STATE_203:0 "チェルカースィ"
  STATE_204:0 "ミンスク"
  STATE_205:0 "カルーガ"
@@ -225,7 +225,7 @@
  STATE_224:0 "ブリャンスク"
  STATE_225:0 "スームィ"
  STATE_226:0 "ドニプロペトロウシク"
- STATE_227:0 "ドネツィク"
+ STATE_227:0 "スターリノ"
  STATE_228:0 "ルハーンシク"
  STATE_229:0 "バクー"
  STATE_230:0 "エレバン"
@@ -321,7 +321,7 @@
  STATE_320:0 "ポンディシェリ"
  STATE_321:0 "ゴア"
  STATE_322:0 "ナクチュ"
- STATE_323:0 "中部開発区域"
+ STATE_323:0 "ネパール中部"
  STATE_324:0 "ブータン"
  STATE_325:0 "昆明"
  STATE_326:0 "香港"
@@ -405,7 +405,7 @@
  STATE_404:0 "カラガンダ"
  STATE_405:0 "タシュケント"
  STATE_406:0 "クルサリー"
- STATE_407:0 "ウラリスク"
+ STATE_407:0 "オラル"
  STATE_408:0 "沿海"
  STATE_409:0 "ハバロフスク"
  STATE_410:0 "スィースターン"
@@ -420,7 +420,7 @@
  STATE_419:0 "タブリーズ"
  STATE_420:0 "ギーラーン"
  STATE_421:0 "クルディスタン"
- STATE_422:0 "西部"
+ STATE_422:0 "セイロン島西部"
  STATE_423:0 "タミル・ナードゥ"
  STATE_424:0 "アーンドラ・プラデーシュ"
  STATE_425:0 "カルナータカ"
@@ -433,7 +433,7 @@
  STATE_432:0 "アッサム"
  STATE_433:0 "ラージャスターン"
  STATE_434:0 "アルナーチャル・プラデーシュ"
- STATE_435:0 "西部開発区域"
+ STATE_435:0 "ネパール西部"
  STATE_436:0 "チャッティースガル"
  STATE_437:0 "マディヤ・プラデーシュ"
  STATE_438:0 "ウッタル・プラデーシュ"
@@ -489,10 +489,10 @@
  STATE_488:0 "ボリバル"
  STATE_489:0 "スリア"
  STATE_490:0 "イキトス"
- STATE_491:0 "西部"
- STATE_492:0 "南部"
+ STATE_491:0 "パナマ西部"
+ STATE_492:0 "ペルー南部"
  STATE_493:0 "アンデス"
- STATE_494:0 "中部"
+ STATE_494:0 "ペルー中部"
  STATE_495:0 "アマゾナス"
  STATE_496:0 "ミナスジェライス"
  STATE_497:0 "マラニョン"
@@ -536,7 +536,7 @@
  STATE_535:0 "中央高地"
  STATE_536:0 "道央"
  STATE_537:0 "南樺太"
- STATE_538:0 "中部コンゴ"
+ STATE_538:0 "コンゴ中部"
  STATE_539:0 "ガボン"
  STATE_540:0 "南アンゴラ"
  STATE_541:0 "南西アフリカ"
@@ -585,7 +585,7 @@
  STATE_584:0 "アシハバード"
  STATE_585:0 "ウルゲンチ"
  STATE_586:0 "アルマトイ"
- STATE_587:0 "南部ウスチュルト"
+ STATE_587:0 "ウスチュルト南部"
  STATE_588:0 "パブロダール"
  STATE_589:0 "東カザフスタン"
  STATE_590:0 "北カザフスタン"
@@ -599,7 +599,7 @@
  STATE_598:0 "蘇中"
  STATE_599:0 "広西"
  STATE_600:0 "江西"
- STATE_601:0 "チャムド"
+ STATE_601:0 "ロカ"
  STATE_602:0 "湖南"
  STATE_603:0 "黔東南"
  STATE_604:0 "青海"
@@ -617,7 +617,7 @@
  STATE_616:0 "寧夏"
  STATE_617:0 "アクス"
  STATE_618:0 "アルタイ"
- STATE_619:0 "クズルス・キルギス"
+ STATE_619:0 "クズルス"
  STATE_620:0 "湖北"
  STATE_621:0 "広州"
  STATE_622:0 "陝北"
@@ -628,14 +628,14 @@
  STATE_627:0 "ミンダナオ"
  STATE_628:0 "セブ"
  STATE_629:0 "布哇諸島"
- STATE_630:0 "ジョンストン環礁"
+ STATE_630:0 "空摩環礁"
  STATE_631:0 "中ノ鳥島"
  STATE_632:0 "大鳥島"
  STATE_633:0 "マーシャル諸島"
  STATE_634:0 "ソロモン諸島"
  STATE_635:0 "ニューカレドニア"
- STATE_636:0 "フィジー"
- STATE_637:0 "カムチャツカ"
+ STATE_636:0 "フィジー諸島"
+ STATE_637:0 "カムチャッカ"
  STATE_638:0 "大宮島"
  STATE_639:0 "ギルバート諸島"
  STATE_640:0 "ザガイン"
@@ -668,8 +668,8 @@
  STATE_667:0 "バリ"
  STATE_668:0 "北マルク"
  STATE_669:0 "西イリアンジャヤ"
- STATE_670:0 "北部"
- STATE_671:0 "北中部"
+ STATE_670:0 "ラオス北部"
+ STATE_671:0 "ベトナム北中部"
  STATE_672:0 "北スマトラ"
  STATE_673:0 "中部スラウェシ"
  STATE_674:0 "中央オーストラリア"
@@ -728,7 +728,7 @@
  STATE_727:0 "ライン諸島"
  STATE_728:0 "広州湾"
  STATE_729:0 "マカオ"
- STATE_730:0 "サンピエール島・ミクロン島"
+ STATE_730:0 "サンピエール島及びミクロン島"
  STATE_731:0 "西マケドニア"
  STATE_732:0 "パミール"
  STATE_733:0 "アンダマン"
@@ -740,10 +740,10 @@
  STATE_739:0 "ハイダグアイ"
  STATE_740:0 "バンクーバー島"
  STATE_741:0 "プノンペン"
- STATE_742:0 "スタリナバード"
+ STATE_742:0 "ドゥシャンベ"
  STATE_743:0 "青島"
  STATE_744:0 "西安"
- STATE_745:0 "大連"
+ STATE_745:0 "遼東"
  STATE_746:0 "オルドス"
  STATE_747:0 "大理"
  STATE_748:0 "畢節"
@@ -757,7 +757,7 @@
  STATE_756:0 "酒泉"
  STATE_757:0 "シガツェ"
  STATE_758:0 "ガリ"
- STATE_759:0 "バインゴリン・モンゴル"
+ STATE_759:0 "バインゴリン"
  STATE_760:0 "クムル"
  STATE_761:0 "興安東"
  STATE_762:0 "カトヴィツェ"
@@ -805,7 +805,7 @@
  STATE_804:0 "ヘルツェゴビナ"
  STATE_805:0 "エピルス北部"
  STATE_806:0 "アルプ＝マリティーム"
- STATE_807:0 "グディニャ"
+ STATE_807:0 "ポモージェ"
  STATE_808:0 "リガ"
  STATE_809:0 "ゼムガレ"
  STATE_810:0 "ラトガレ"
@@ -813,7 +813,7 @@
  STATE_812:0 "ハリュ"
  STATE_813:0 "ヴィルマー"
  STATE_814:0 "スードゥヴァ"
- STATE_815:0 "アウクシュタイティヤ"
+ STATE_815:0 "高地リトアニア"
  STATE_816:0 "ウェストバージニア"
  STATE_817:0 "ゴビ"
  STATE_818:0 "ホブド"
@@ -860,12 +860,12 @@
  STATE_859:0 "メーガーラヤ"
  STATE_860:0 "ラダック"
  STATE_861:0 "ジャールカンド"
- STATE_862:0 "東部開発区域"
- STATE_863:0 "シンガポール"
+ STATE_862:0 "ネパール東部"
+ STATE_863:0 "シンガポール島"
  STATE_864:0 "シャン"
  STATE_865:0 "チャンディーガル"
  STATE_866:0 "ナガランド"
- STATE_867:0 "中部"
+ STATE_867:0 "セイロン島東部"
  STATE_868:0 "烏蘭烏拉"
  STATE_869:0 "スルハンダリヤ"
  STATE_870:0 "カシュカダリヤ"
@@ -887,19 +887,19 @@
  STATE_886:0 "アンデス低地"
  STATE_887:0 "アラスカ内陸部"
  STATE_888:0 "チュミカン"
- STATE_889:0 "ユダヤ"
+ STATE_889:0 "ビロビジャン"
  STATE_890:0 "アマザル"
  STATE_891:0 "トゥグロ"
  STATE_892:0 "シーサンパンナ"
  STATE_893:0 "フェルナンド・ポー"
  STATE_894:0 "ジョホール"
- STATE_895:0 "関東州"
+ STATE_895:0 "大連"
  STATE_896:0 "エリー"
  STATE_897:0 "南通"
  STATE_898:0 "聊城"
  STATE_899:0 "済源"
  STATE_900:0 "シャスタ・カスケード"
- STATE_901:0 "中部ルソン"
+ STATE_901:0 "ルソン中部"
  STATE_902:0 "メソポタミア"
  STATE_903:0 "スエズ運河地帯"
  STATE_904:0 "北シュレースヴィヒ"
@@ -963,8 +963,8 @@
  STATE_962:0 "プッリャ"
  STATE_963:0 "バジリカータ"
  STATE_964:0 "カシュガル"
- STATE_965:0 "イリ・カザフ"
- STATE_966:0 "ボルタラ・モンゴル"
+ STATE_965:0 "イリ"
+ STATE_966:0 "ボルタラ"
  STATE_967:0 "タルバガタイ"
  STATE_968:0 "カラマイ"
  STATE_969:0 "昌吉"
@@ -1020,7 +1020,7 @@
  STATE_1019:0 "安東"
  STATE_1020:0 "ケーララ"
  STATE_1021:0 "アザド・カシミール"
- STATE_1022:0 "東北部"
+ STATE_1022:0 "ベトナム東北部"
  STATE_1023:0 "バーモント"
  STATE_1024:0 "ニューハンプシャー"
  STATE_1025:0 "マサチューセッツ"
@@ -1030,14 +1030,14 @@
  STATE_1029:0 "ハスコヴォ"
  STATE_1030:0 "キャバン"
  STATE_1031:0 "ドニゴール"
- STATE_1032:0 "西北部"
+ STATE_1032:0 "ベトナム西北部"
  STATE_1033:0 "紅河デルタ"
- STATE_1034:0 "東南部"
- STATE_1035:0 "中部高原"
+ STATE_1034:0 "ベトナム東南部"
+ STATE_1035:0 "ベトナム中部"
  STATE_1036:0 "テルノーピリ"
  STATE_1037:0 "キロヴォフラード"
  STATE_1038:0 "リウネ"
- STATE_1039:0 "シロンスク"
+ STATE_1039:0 "プシェムィシル"
  STATE_1040:0 "メゼリッツ"
  STATE_1041:0 "ズナメンスク"
  STATE_1042:0 "アゾフ"
@@ -1056,7 +1056,7 @@
  STATE_1055:0 "ヴェトルジュスキー"
  STATE_1056:0 "コストロマ"
  STATE_1057:0 "タニンダーリ"
- STATE_1058:0 "南部"
+ STATE_1058:0 "ラオス南部"
  STATE_1059:0 "スワジランド"
  STATE_1060:0 "バストランド"
  STATE_1061:0 "マン島"
@@ -1075,11 +1075,11 @@
  STATE_1074:0 "ウッタラーカンド"
  STATE_1075:0 "ヒマーチャル・プラデーシュ"
  STATE_1076:0 "マニプル"
- STATE_1077:0 "南部"
+ STATE_1077:0 "セイロン島南部"
  STATE_1078:0 "サンホアキンバレー"
  STATE_1079:0 "シエラネバダ山脈"
  STATE_1080:0 "南カリフォルニア"
- STATE_1081:0 "威海"
+ STATE_1081:0 "山東"
  STATE_1082:0 "コディアック島"
  STATE_1083:0 "アントファガスタ"
  STATE_1084:0 "温州"
@@ -1103,7 +1103,7 @@
  STATE_1102:0 "ティチーノ"
  STATE_1103:0 "フリブール"
  STATE_1104:0 "ヴァレー"
- STATE_1105:0 "リュクサンブール"
+ STATE_1105:0 "ワロン・リュクサンブール"
  STATE_1106:0 "オストカントネ"
  STATE_1107:0 "	ヒーウマー島"
  STATE_1108:0 "フランドル・フランセーズ"
@@ -1143,7 +1143,7 @@
  STATE_1142:0 "パクティア"
  STATE_1143:0 "ザンゲズル"
  STATE_1144:0 "ナヒチェヴァン"
- STATE_1145:0 "高地カラバフ"
+ STATE_1145:0 "カラバフ高地"
  STATE_1146:0 "ギャンジャ"
  STATE_1147:0 "ザカタラ"
  STATE_1148:0 "湖州"
@@ -1297,7 +1297,7 @@
  STATE_1296:0 "西スラウェシ"
  STATE_1297:0 "北イリアンジャヤ"
  STATE_1298:0 "ウィーン"
- STATE_1299:0 "中部"
+ STATE_1299:0 "ラオス中部"
  STATE_1300:0 "コンポンチャム"
  STATE_1301:0 "ヴェリカ・オレクサンドリウカ"
  STATE_1302:0 "クルィヴィーイ・リーフ"
@@ -1356,3 +1356,6 @@
  STATE_1355:0 "ケルマディック諸島"
  STATE_1356:0 "ジャービス島"
  STATE_1357:0 "ブーベ島"
+ STATE_1358:0 "タークス・カイコス諸島"
+ STATE_1359:0 "ケイマン諸島"
+ STATE_1360:0 "トレンティーノ"
