--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -6,22 +6,27 @@
  JAP_senior_statesmen's_conference_desc:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一\n大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎\n海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
  JAP_cabinet_meeting:0 "閣議を開く"
  JAP_cabinet_meeting_desc:0 "一・二二事件を受けて各国務大臣を招集して閣議を開き、当案件に対し早急に対応しなければならない。"
- JAP_Declaration_of_martial_law:0 "戒嚴の宣告"
- JAP_Declaration_of_martial_law_desc:0 "賊軍に対する迅速対処の為、昭和天皇による戒嚴令の施行を支持を頂いた後に宣告を行う必要がある。"
- JAP_Trial_of_naval_officers:0 "海軍士官の裁判"
- JAP_Trial_of_naval_officers_desc:0 "「...海軍は未だ生きていたのかね？」"
- JAP_Arrest_of_agronomists:0 "農本主義者を逮捕"
- JAP_Arrest_of_agronomists_desc:0 "本件は農本思想の危険性の一面が垣間見れた。\nこの様な体制批判的な態度は見直させるべきであろう。"
- JAP_Trial_of_Imperialist_officers:0 "皇道派将校の裁判"
- JAP_Trial_of_Imperialist_officers_desc:0 "忌々しい皇道派は未だに息を潜めている事は明確であろう。\nしかし、何であろうとクーデターを起こした賊軍は処罰されなければならない。"
- JAP_Stability_of_the_situation:0 "事態の安定"
- JAP_Stability_of_the_situation_desc:0 "一時的な安定は保たれたものの、これは”終わり”では無く”始まり”なのかもしれない..."
+ JAP_declaration_of_martial_law:0 "戒嚴の宣告"
+ JAP_declaration_of_martial_law_desc:0 "賊軍に対する迅速対処の為、昭和天皇による戒嚴令の施行を支持を頂いた後に宣告を行う必要がある。"
+ JAP_judgment_of_naval_officers:0 "海軍士官の裁判"
+ JAP_judgment_of_naval_officers_desc:0 "「...海軍は未だ生きていたのかね？」"
+ JAP_arrest_of_agrarianists:0 "農本主義者を逮捕"
+ JAP_arrest_of_agrarianists_desc:0 "本件は農本思想の危険性の一面が垣間見れた。\nこの様な体制批判的な態度は見直させるべきであろう。"
+ JAP_judgment_of_kodoha_officers:0 "皇道派将校の裁判"
+ JAP_judgment_of_kodoha_officers_desc:0 "忌々しい皇道派は未だに息を潜めている事は明確であろう。\nしかし、何であろうとクーデターを起こした賊軍は処罰されなければならない。"
+ JAP_stability_of_the_situation:0 "事態の安定"
+ JAP_stability_of_the_situation_desc:0 "一時的な安定は保たれたものの、これは”終わり”では無く”始まり”なのかもしれない..."
  
  JAP_Marco_Polo_Bridge_Incident:0 "盧溝橋事件"
  JAP_Battle_of_Nanking:0 "南京攻略戦"
  JAP_Capture_of_Wuhan:0 "武漢作戦"
  JAP_Capture_of_Chongqing:0 "重慶作戦"
  JAP_triumphant:0 "凱旋だ！"
+ 
+ JAP_taimeikoka:0 "大命降下"
+ JAP_selection_from_navy_candidates:0 "海軍から奏薦する"
+ JAP_no_selection_from_anywhere:0 "軍部との関わりを絶つ...？"
+ JAP_selection_from_army_candidates:0 "陸軍から奏薦する"
  
  JAP_Keisuke_Okada:0 "岡田啓介"
  JAP_1:0 ""
@@ -241,21 +246,21 @@
  JAP_The_commander_of_Operation_Ichi-Go:0 "一号作戦の指揮官"
 
 #イベント
- JAP.0.t:0 "大日本帝國"
+ JAP.0.t:0 "大日本帝国"
  JAP.0.d:0 "大日本帝国は先のアメリカ合衆国との戦争に勝利した。戦前,日本と米国と深い関係を持ち両国に挟まれた「ハワイ王国」は長年提案し続けていた日本との連邦化を達成した。\n\n西方では未だ戦いは続いているが北方ではソ連に対して蜂起したトランスバイカルとの条約により北樺太を獲得し, 南方では米英仏蘭植民地へ様々な形で影響拡大に成功した。\n\n極東…すなわち日昇る場所に位置する島国は近代化し始めて100年経たずして大国となった。我々はこの太陽を沈めることなく繁栄させねばならない。"
  JAP.0.0:0 "天皇陛下万歳！大日本帝国万歳！"
  JAP.2.t:0 "一・二二事件"
- JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、武装した海軍青年士官らが徒党を組み、帝都にてクーデターを起こした。\n本件で標的にされた東條英機首相は、銃撃され重体になられた..."
+ JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、そして武装した海軍青年士官らが徒党を組み、政府要人を襲撃するとともに永田町や霞ヶ関などの一帯を占拠した。\n\n未だに本件の被害の全容は不明である..."
  JAP.2.0:0 "叛乱軍を捕らえよ！"
  JAP.3.t:0 "臨時代理"
- JAP.3.d:0 "一・二二事件と未だに続く志那事変の対処の為にも、臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣である安藤紀三郎と外務大臣である重光葵の二人がいる。"
+ JAP.3.d:0 "一・二二事件の全容が見えつつある。\n賊軍は内閣総理大臣公邸にも襲撃を行ったようであった。この襲撃により東条英機首相が重体、他政府要人も重傷者が多い模様である。\n未だ続く志那事変の対処の為にも、すぐにでも臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣であった安藤紀三郎\n外務大臣であった重光葵の二人が挙げられる。"
  JAP.3.0:0 "東條の腹心の安藤紀三郎に"
  JAP.3.1:0 ""欠点がない"重光葵に"
  JAP.4.t:0 "重臣会議"
- JAP.4.d:0 "東條首相が重体の為、後継の首相を決める必要がある。\n陸軍は朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、大陸打通作戦の指揮官だった畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條の岡田啓介らを奏薦している。\n彼ら以外にも様々な候補が存在しているが、誰が帝國にとって最良の選択であろう？"
- JAP.4.0:0 "奏薦されたのは陸軍将校だ！"
- JAP.4.1:0 "いいや、海軍士官が奏薦された！"
- JAP.4.2:0 "軍部の意見なんぞ無視してしまえ..."
+ JAP.4.d:0 "未だ続く志那事変の対処の為にも、すぐにでも後継の首相を決める必要がある。\n陸軍では、現朝鮮総督の小磯國昭、南方軍総司令官の寺内寿一、そして大陸打通作戦の立役者である畑俊六らを奏薦している。\n対する海軍は、枢密院議長の鈴木貫太郎、海軍左派トリオの一角である米内光政、反東條派閥に属する岡田啓介らを奏薦しているようだ。\n\nもちろん彼ら以外に様々な候補が存在しているが、誰が帝国にとって最善の選択であろう？"
+ JAP.4.0:0 "奏薦されたのは陸軍の出した候補だ！"
+ JAP.4.1:0 "いいや、海軍の出した候補が奏薦された！"
+ JAP.4.2:0 "軍部の意見なんぞ無視してしまえばよい..."
  JAP.5.t:0 "閣議"
  JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が行われた。\n内務大臣の安藤紀三郎は戒嚴令の施行を主張したが、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的に速やかな鎮圧を望んでいる昭和天皇の意向を受け、戒嚴令の施行は決定された。"
  JAP.5.0:0 "決まりだな"
@@ -501,5 +506,12 @@
  JAP_impending_zveno_coup_desc:0 "[GetZvenoCoupDesc]"
  JAP_impending_zveno_coup_size_tt:0 "[GetZvenoName]支持者が内戦を開始する。\nズヴェノの軍の規模はズヴェノの支持率に比例する。"
  
+#フラグ
+ JAP_1-22_Incident_occurred:0 "一・二二事件が発生した"
+ JAP_senior_statesmen's_conference_held:0 "重臣会議が開催された"
+ JAP_army_candidates_selected:0 "陸軍の出した候補が奏薦された"
+ JAP_navy_candidates_selected:0 "海軍の出した候補が奏薦された"
+ JAP_military_opinion_ignored:0 "軍部の意見は無視された"
+ 
 #ツールチップ
- JAP_occurrence_of_1-22_Incident:0 "§R一・二二事件が起きようとしている...§!"
+ JAP_omen_of_1-22_Incident:0 "§R国内に混乱が起きようとしている...§!"
