--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -253,7 +253,7 @@
  JAP.2.d:0 "昭和21年1月22日、皇道派の影響を受けた陸軍青年将校らと一部の農本主義者、そして武装した海軍青年士官らが徒党を組み、政府要人を襲撃するとともに永田町や霞ヶ関などの一帯を占拠した。\n\n未だに本件の被害の全容は不明である..."
  JAP.2.0:0 "叛乱軍を捕らえよ！"
  JAP.3.t:0 "臨時代理"
- JAP.3.d:0 "一・二二事件の全容が見えつつある。\n賊軍は内閣総理大臣公邸にも襲撃を行ったようであった。この襲撃により東条英機首相が重体、他政府要人も重傷者が多い模様である。\n未だ続く志那事変の対処の為にも、すぐにでも臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣であった安藤紀三郎\n外務大臣であった重光葵の二人が挙げられる。"
+ JAP.3.d:0 "一・二二事件の全容が見えつつある。\n賊軍は内閣総理大臣公邸にも襲撃を行ったようであった。この襲撃により東条英機首相が重体、他政府要人も重傷者が多い模様である。\n未だ続く志那事変の対処の為にも、すぐにでも臨時代理を決める必要がある。\n臨時代理の候補としては、東条内閣の内務大臣であった安藤紀三郎、もしくは外務大臣であった重光葵の二人が挙げられる。"
  JAP.3.0:0 "東條の腹心の安藤紀三郎に"
  JAP.3.1:0 ""欠点がない"重光葵に"
  JAP.4.t:0 "重臣会議"
