--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -262,7 +262,7 @@
  JAP.4.1:0 "いいや、海軍の出した候補が奏薦された！"
  JAP.4.2:0 "軍部の意見なんぞ無視してしまえばよい..."
  JAP.5.t:0 "閣議"
- JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が行われた。\n内務大臣の安藤紀三郎は戒嚴令の施行を主張したが、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的に速やかな鎮圧を望んでいる昭和天皇の意向を受け、戒嚴令の施行は決定された。"
+ JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が始まった。\n\n内務大臣の安藤紀三郎は戒嚴令の施行を主張した。\nしかし、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的には、速やかな鎮圧を望んでおられる昭和天皇の意向を受け、戒嚴令の施行は決定されたのであった..."
  JAP.5.0:0 "決まりだな"
  JAP.6.t:0 "海軍士官の裁判"
  JAP.6.d:0 "D"
@@ -512,6 +512,7 @@
  JAP_army_candidates_selected:0 "陸軍の出した候補が奏薦された"
  JAP_navy_candidates_selected:0 "海軍の出した候補が奏薦された"
  JAP_military_opinion_ignored:0 "軍部の意見は無視された"
+ JAP_decision_of_declaration:0 "戒厳の宣告が決定された"
  
 #ツールチップ
  JAP_omen_of_1-22_Incident:0 "§R国内に混乱が起きようとしている...§!"
