--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -263,17 +263,17 @@
  JAP.4.2:0 "軍部の意見なんぞ無視してしまえばよい..."
  JAP.5.t:0 "閣議"
  JAP.5.d:0 "一・二二事件について、各国務大臣が集まり協議が始まった。\n\n内務大臣の安藤紀三郎は戒嚴令の施行を主張した。\nしかし、海軍大臣の野村直邦は陸軍のこれ以上の台頭に繋がるとしてこの戒嚴令に反対していた。\n最終的には、速やかな鎮圧を望んでおられる昭和天皇の意向を受け、戒嚴令の施行は決定されたのであった..."
- JAP.5.0:0 "決まりだな"
+ JAP.5.0:0 "決まりだな！"
  JAP.6.t:0 "海軍士官の裁判"
- JAP.6.d:0 "D"
+ JAP.6.d:0 "海軍士官の裁判"
  JAP.6.0:0 "公正な判決を下す"
  JAP.6.1:0 "臣民が助命嘆願運動を行っている..."
  JAP.7.t:0 "農本主義者を逮捕"
- JAP.7.d:0 "D"
+ JAP.7.d:0 "農本主義者を逮捕"
  JAP.7.0:0 "全国の農本主義者達の思想を"保護観察"しよう"
  JAP.7.1:0 "投獄でもしておけ"
  JAP.8.t:0 "皇道派将校の裁判"
- JAP.8.d:0 "D"
+ JAP.8.d:0 "皇道派将校の裁判"
  JAP.8.0:0 "公正な判決なんてもんはない"
  JAP.8.1:0 "もしかしたら..."
  
@@ -516,3 +516,4 @@
  
 #ツールチップ
  JAP_omen_of_1-22_Incident:0 "§R国内に混乱が起きようとしている...§!"
+ JAP_menokataki_against_navy:0 "§R海軍を目の敵に...おっと§!"
