--- a/localisation/english/generic/_geacps_characters_l_english.yml
+++ b/localisation/english/generic/_geacps_characters_l_english.yml
@@ -73,23 +73,33 @@
  CHARACTER_hirohito_desc:0 "第124代天皇。諱は裕仁、御称号は迪宮。お印は若竹。\n1921年11月25日から1926年12月25日までの5年余りに渡り、父帝・大正天皇の健康状態の悪化により、摂政宮となった。\n在位中に日米戦争を挟み、大日本帝国憲法下の「統治権の総攬者」であり「日布連合元首」である。"
  CHARACTER_morimasa_nashimoto:0 "梨本守正"
  CHARACTER_prince_morimasa_nashimoto:0 "梨本宮守正王"
+ CHARACTER_fushimi_hiroyasu:0 "伏見宮博"
+ CHARACTER_prince_fushimi_hiroyasu:0 "伏見宮博恭王"
+ 
  CHARACTER_fumimaro_konoe:0 "近衛文麿"
  CHARACTER_mamoru_shigemitsu:0 "重光葵"
- CHARACTER_hajime_sugiyama:0 "杉山元"
- CHARACTER_hideki_tojo:0 "東條英機"
+ 
+ CHARACTER_nobuyoshi_muto:0 "武藤信義"
  CHARACTER_hisaichi_terauchi:0 "寺内寿一"
+ CHARACTER_hajime_sugiyama:0 "杉山元"
+ CHARACTER_shunroku_hata:0 "畑俊六"
+ CHARACTER_tomoshige_tsunoda:0 "津野田知重"
+ CHARACTER_hideki_tojo:0 "東條英機"
  CHARACTER_hitoshi_imamura:0 "今村均"
  CHARACTER_hitoshi_imamura_desc:0 "インドネシア占領地司令官"
  CHARACTER_kisaburo_ando:0 "安藤喜三郎"
  CHARACTER_kuniaki_koiso:0 "小磯国昭"
- CHARACTER_nobuyoshi_muto:0 "武藤信義"
  CHARACTER_nobuyuki_abe:0 "阿部信行"
  CHARACTER_nobuyuki_abe_desc:0 "阿部信行は、日本の陸軍軍人、政治家。\n陸軍士官学校9期、陸軍大学校19期、陸軍大将。位階は正二位。勲等は勲一等。\n予備役編入後、内閣総理大臣、外務大臣、翼賛政治会総裁、貴族院議員、朝鮮総督などを歴任した。"
  CHARACTER_otozo_yamada:0 "山田乙三"
  CHARACTER_otozo_yamada_desc:0 "満州国駐箚特命全権大使及び関東軍司令官"
  CHARACTER_rikichi_ando:0 "安藤利吉"
  CHARACTER_rikichi_ando_desc:0 "台湾総督"
- CHARACTER_shunroku_hata:0 "畑俊六"
+ 
+ CHARACTER_isoroku_yamamoto:0 "山本五十六"
+ CHARACTER_osami_nagano:0 "永野修身"
+ CHARACTER_mineichi_koga:0 "古賀峯一"
+ CHARACTER_sokichi_takagi:0 "高木惣吉"
  CHARACTER_boshiro_hosogaya:0 "細萱戊子郎"
  CHARACTER_boshiro_hosogaya_desc:0 "南洋庁長官"
  CHARACTER_kantaro_suzuki:0 "鈴木貫太郎"
