--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -277,8 +277,8 @@
  JAP.7.1:0 "投獄でもしておけ"
  JAP.8.t:0 "皇道派将校の裁判"
  JAP.8.d:0 "皇道派将校の裁判"
- JAP.8.0:0 "公正な判決なんてもんはない"
- JAP.8.1:0 "もしかしたら..."
+ JAP.8.0:0 "どのくらい獄中に送れば気が済むのだろうか..."
+ JAP.8.1:0 "妥協点を探る"
  
  JAP.000.t:0 "武漢作戦"
  JAP.000.d:0 "武漢作戦"
@@ -516,6 +516,10 @@
  JAP_navy_candidates_selected:0 "海軍の出した候補が奏薦された"
  JAP_military_opinion_ignored:0 "軍部の意見は無視された"
  JAP_decision_of_declaration:0 "戒厳の宣告が決定された"
+ JAP_heavy_judgment_against_navy:0 "海軍は重い判決を下された"
+ JAP_light_judgment_against_navy:0 "海軍は軽い判決を下された"
+ JAP_heavy_judgment_against_kodoha:0 "皇道派将校は重い判決を下された"
+ JAP_light_judgment_against_kodoha:0 "皇道派将校は軽い判決を下された"
  
 #ツールチップ
  JAP_omen_of_1-22_Incident:0 "§R国内に混乱が起きようとしている...§!"
