--- a/localisation/english/generic/_geacps_generic_l_english.yml
+++ b/localisation/english/generic/_geacps_generic_l_english.yml
@@ -1,52 +1,53 @@
 ﻿l_english:
 #国家方針
- Strengthening_domestic_capital:0 "自国資本の強化"
- Strengthening_military_power:0 "軍事力の強化"
- Initial_industrialization:0 "初期工業化"
- Focus_on_the_military_one:0 "軍事への注力 I"
- Focus_on_the_military_two:0 "軍事への注力 II"
- Focus_on_the_military_three:0 "軍事への注力 III"
- Focus_on_the_private_sector_one:0 "民間への注力 I"
- Focus_on_the_private_sector_two:0 "民間への注力 II"
- Focus_on_the_private_sector_three:0 "民間への注力 III"
- Focus_on_national_defense:0 "国土防衛への注力"
- Mainland_fortification:0 "本土の要塞化"
- Development_of_nuclear_weapons:0 "核兵器の開発"
- Investing_in_technology:0 "技術への投資"
- Focus_on_basic_electronics:0 "基礎電子工学への注力"
- Increased_construction_speed:0 "建設速度の向上"
- Focus_on_industry:0 "産業への注力"
- Increased_production_capacity:0 "生産能力の向上"
- Investing_in_infrastructure_I:0 "インフラへの投資 I"
- Investing_in_infrastructure_II:0 "インフラへの投資 II"
- Investing_in_infrastructure_III:0 "インフラへの投資 III"
- Air_Force:0 "[ROOT.GetName]空軍"
- Lend-Lease_from_other_countries:0 "他国からのレンドリース"
- Original_research:0 "独自の研究"
- Cooperation_with_the_Navy:0 "海軍との連携"
- Cooperation_with_the_Army:0 "陸軍との連携"
- Strategic_aircraft_specialization:0 "戦略航空機の特化"
- Tactical_aircraft_specialization:0 "戦術航空機の特化"
- Expansion_of_air_force_base:0 "空軍基地の増設"
- Rocket_development:0 "ロケットの開発"
- Jet_aircraft_development:0 "ジェット機の開発"
- Navy:0 "[ROOT.GetName]海軍"
- Flexible_navy:0 "柔軟な海軍"
- Focus_on_submarines:0 "潜水艦への注力"
- Focus_on_destroyers:0 "駆逐艦への注力"
- Large_navy:0 "大規模海軍"
- Focus_on_capital_ships:0 "主力艦への注力"
- Focus_on_aircraft_carriers:0 "航空母艦への注力"
- Expansion_of_naval_base:0 "海軍基地の増設"
- Army:0 "[ROOT.GetName]陸軍"
- Focus_on_light_tanks:0 "軽戦車への注力"
- Focus_on_medium_tanks:0 "中戦車への注力"
- Focus_on_heavy_tanks:0 "重戦車への注力"
- Focus_on_artillery_equipment_I:0 "砲兵装備への注力 I"
- Focus_on_artillery_equipment_II:0 "砲兵装備への注力 II"
- Focus_on_artillery_equipment_III:0 "砲兵装備への注力 III"
- Focus_on_infantry_equipment_I:0 "歩兵装備への注力 I"
- Focus_on_infantry_equipment_II:0 "歩兵装備への注力 II"
- Focus_on_infantry_equipment_III:0 "歩兵装備への注力 III"
- Focus_on_special_forces:0 "特殊部隊への注力"
- Focus_on_doctrine:0 "ドクトリンへの注力"
+ strengthening_domestic_capital:0 "自国資本の強化"
+ strengthening_military_power:0 "軍事力の強化"
+ initial_industrialization:0 "初期工業化"
+ focus_on_the_military_1:0 "軍事への注力 I"
+ focus_on_the_military_2:0 "軍事への注力 II"
+ focus_on_the_military_3:0 "軍事への注力 III"
+ focus_on_the_private_sector_1:0 "民間への注力 I"
+ focus_on_the_private_sector_2:0 "民間への注力 II"
+ focus_on_the_private_sector_3:0 "民間への注力 III"
+ focus_on_national_defense:0 "国土防衛への注力"
+ mainland_fortification:0 "本土の要塞化"
+ development_of_nuclear_weapons:0 "核兵器の開発"
+ investing_in_technology:0 "技術への投資"
+ focus_on_basic_electronics:0 "基礎電子工学への注力"
+ increased_construction_speed:0 "建設速度の向上"
+ focus_on_industry:0 "産業への注力"
+ increased_production_capacity:0 "生産能力の向上"
+ investing_in_infrastructure_1:0 "インフラへの投資 I"
+ investing_in_infrastructure_2:0 "インフラへの投資 II"
+ investing_in_infrastructure_3:0 "インフラへの投資 III"
+ focus_on_army:0 "陸軍への注力"
+ focus_on_light_tanks:0 "軽戦車への注力"
+ focus_on_medium_tanks:0 "中戦車への注力"
+ focus_on_heavy_tanks:0 "重戦車への注力"
+ focus_on_artillery_equipment_1:0 "砲兵装備への注力 I"
+ focus_on_artillery_equipment_2:0 "砲兵装備への注力 II"
+ focus_on_artillery_equipment_3:0 "砲兵装備への注力 III"
+ focus_on_infantry_equipment_1:0 "歩兵装備への注力 I"
+ focus_on_infantry_equipment_2:0 "歩兵装備への注力 II"
+ focus_on_infantry_equipment_3:0 "歩兵装備への注力 III"
+ focus_on_special_forces:0 "特殊部隊への注力"
+ focus_on_doctrine:0 "ドクトリンへの注力"
+ focus_on_navy:0 "海軍への注力"
+ flexible_navy:0 "柔軟な海軍"
+ focus_on_submarines:0 "潜水艦への注力"
+ focus_on_destroyers:0 "駆逐艦への注力"
+ large_navy:0 "大規模海軍"
+ focus_on_capital_ships:0 "主力艦への注力"
+ focus_on_aircraft_carriers:0 "航空母艦への注力"
+ expansion_of_naval_base:0 "海軍基地の増設"
+ focus_on_air_force:0 "空軍への注力"
+ lend-lease_from_other_countries:0 "他国からのレンドリース"
+ original_research:0 "独自の研究"
+ cooperation_with_the_army:0 "陸軍との連携"
+ cooperation_with_the_navy:0 "海軍との連携"
+ cooperation_with_the_civil:0 "民間との連携"
+ strategic_aircraft_specialization:0 "戦略航空機の特化"
+ tactical_aircraft_specialization:0 "戦術航空機の特化"
+ expansion_of_air_force_base:0 "空軍基地の増設"
+ rocket_development:0 "ロケットの開発"
+ jet_aircraft_development:0 "ジェット機の開発"
