国家タグの追加など

--- a/localisation/english/_map/countries_colony_l_english.yml
+++ b/localisation/english/_map/countries_colony_l_english.yml
@@ -1143,14 +1143,14 @@
  NGA_colony_and_protectorate_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地及び保護領"
  NGA_colony_and_protectorate_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
- NGR_dominion:0 "$NONIDEOLOGY$自治領"
- NGR_dominion_DEF:0 "$NONIDEOLOGY$自治領"
- NGR_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- NGR_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
- NGR_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
- NGR_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- NGR_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
- NGR_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NGE_dominion:0 "$NONIDEOLOGY$自治領"
+ NGE_dominion_DEF:0 "$NONIDEOLOGY$自治領"
+ NGE_colony:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ NGE_colony_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$植民地"
+ NGE_colony_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
+ NGE_overseas_territory:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ NGE_overseas_territory_DEF:0 "$OVERLORDADJ$領$NONIDEOLOGY$"
+ NGE_overseas_territory_ADJ:0 "$OVERLORDADJ$領$NONIDEOLOGYADJ$"
  
  NMB_dominion:0 "南西アフリカ自治領"
  NMB_dominion_DEF:0 "南西アフリカ自治領"
