--- a/localisation/english/_map/countries_l_english.yml
+++ b/localisation/english/_map/countries_l_english.yml
@@ -714,9 +714,9 @@
  NGA_DEF:0 "ナイジェリア"
  NGA_ADJ:0 "ナイジェリア"
  
- NGR:0 "ニジェール"
- NGR_DEF:0 "ニジェール"
- NGR_ADJ:0 "ニジェール"
+ NGE:0 "ニジェール"
+ NGE_DEF:0 "ニジェール"
+ NGE_ADJ:0 "ニジェール"
  
  NMB:0 "ナミビア"
  NMB_DEF:0 "ナミビア"
@@ -1327,6 +1327,10 @@
  BRL_DEF:0 "ベルリン"
  BRL_ADJ:0 "ベルリン"
  
+ CLT:0 "ケルト"
+ CLT_DEF:0 "ケルト"
+ CLT_ADJ:0 "ケルト"
+ 
  COW:0 "コーンウォール"
  COW_DEF:0 "コーンウォール"
  COW_ADJ:0 "コーンウォール"
@@ -1406,6 +1410,10 @@
  MRV:0 "モラヴィア"
  MRV_DEF:0 "モラヴィア"
  MRV_ADJ:0 "モラヴィア"
+ 
+ NGR:0 "北ドイツ"
+ NGR_DEF:0 "北ドイツ"
+ NGR_ADJ:0 "北ドイツ"
  
  RHI:0 "ライン"
  RHI_DEF:0 "ライン"
