--- a/localisation/english/_map/countries_long_l_english.yml
+++ b/localisation/english/_map/countries_long_l_english.yml
@@ -1097,8 +1097,8 @@
  NGA_republic:0 "ナイジェリア共和国"
  NGA_republic_DEF:0 "ナイジェリア共和国"
  
- NGR_republic:0 "ニジェール共和国"
- NGR_republic_DEF:0 "ニジェール共和国"
+ NGE_republic:0 "ニジェール共和国"
+ NGE_republic_DEF:0 "ニジェール共和国"
  
  NMB_republic:0 "ナミビア共和国"
  NMB_republic_DEF:0 "ナミビア共和国"
@@ -1869,6 +1869,9 @@
  BRL_free_city:0 "自由都市ベルリン"
  BRL_free_city_DEF:0 "自由都市ベルリン"
  
+ CLT_union:0 "ケルト連合"
+ CLT_union_DEF:0 "ケルト連合"
+ 
  COW_duchy:0 "コーンウォール公国"
  COW_duchy_DEF:0 "コーンウォール公国"
  COW_republic:0 "コーンウォール共和国"
@@ -1943,6 +1946,9 @@
  MRV_kingdom_DEF:0 "モラヴィア王国"
  MRV_republic:0 "モラヴィア共和国"
  MRV_republic_DEF:0 "モラヴィア共和国"
+ 
+ NGR_confederation:0 "北ドイツ連邦"
+ NGR_confederation_DEF:0 "北ドイツ連邦"
  
  RHI_confederation:0 "ライン連邦"
  RHI_confederation_DEF:0 "ライン連邦"
