--- a/localisation/english/_map/countries_cosmetic_l_english.yml
+++ b/localisation/english/_map/countries_cosmetic_l_english.yml
@@ -112,6 +112,10 @@
  MUSCATandOMAN_muscat_sultanate_DEF:0 "マスカット及びオマーン・スルタン国"
  MUSCATandOMAN_muscat_sultanate_ADJ:0 "マスカット・オマーン"
  
+ SOUTHARABIA_federation:0 "南アラビア連邦"
+ SOUTHARABIA_federation_DEF:0 "南アラビア連邦"
+ SOUTHARABIA_federation_ADJ:0 "南アラビア"
+ 
  TRANSJORDAN_emirate:0 "トランスヨルダン首長国"
  TRANSJORDAN_emirate_DEF:0 "トランスヨルダン首長国"
  TRANSJORDAN_emirate_ADJ:0 "トランスヨルダン"
@@ -253,6 +257,10 @@
  ENG-WLS_commonwealth_DEF:0 "イングランド＝ウェールズ共和国"
  ENG-WLS_commonwealth_ADJ:0 "イングランド＝ウェールズ"
  
+ ENGandWLS_kingdom:0 "イングランド及びウェールズ王国"
+ ENGandWLS_kingdom_DEF:0 "イングランド及びウェールズ王国"
+ ENGandWLS_kingdom_ADJ:0 "イングランド・ウェールズ"
+ 
  FLN-WLL_kingdom:0 "フランドル＝ワロン王国"
  FLN-WLL_kingdom_DEF:0 "フランドル＝ワロン王国"
  FLN-WLL_kingdom_ADJ:0 "フランドル＝ワロン"
@@ -340,6 +348,10 @@
  IREandGBR_united_kingdom:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_DEF:0 "アイルランド及びグレートブリテン連合王国"
  IREandGBR_united_kingdom_ADJ:0 "アイルランド"
+ 
+ IREandSCO_union:0 "アイルランド及びスコットランド連合"
+ IREandSCO_union_DEF:0 "アイルランド及びスコットランド連合"
+ IREandSCO_union_ADJ:0 "アイルランド・スコットランド"
  
  ITAbyCISALPINA_kingdom:0 "イタリア王国"
  ITAbyCISALPINA_kingdom_DEF:0 "イタリア王国"
