--- a/localisation/english/countries_asia/geacps_JAP_l_english.yml
+++ b/localisation/english/countries_asia/geacps_JAP_l_english.yml
@@ -25,6 +25,8 @@
  
  JAP_selection_from_army_candidates:0 "陸軍から奏薦する"
  
+ JAP_Japanese_Revolution:0 "日本革命"
+ 
  JAP_Marco_Polo_Bridge_Incident:0 "盧溝橋事件"
  JAP_Battle_of_Nanking:0 "南京攻略戦"
  JAP_Capture_of_Wuhan:0 "武漢作戦"
