--- a/localisation/english/generic/_geacps_characters_l_english.yml
+++ b/localisation/english/generic/_geacps_characters_l_english.yml
@@ -81,6 +81,9 @@
  CHARACTER_prince_hiroyasu_fushimi:0 "伏見宮博恭王"
  CHARACTER_fumimaro_konoe:0 "近衛文麿"
  CHARACTER_mamoru_shigemitsu:0 "重光葵"
+ CHARACTER_nobusuke_kishi:0 "岸信介"
+ CHARACTER_ishiwata_sotaro:0 "石渡荘太郎"
+ CHARACTER_sanzo_nosaka:0 "野坂参三"
  CHARACTER_hajime_sugiyama:0 "杉山元"
  CHARACTER_hideki_tojo:0 "東條英機"
  CHARACTER_hisaichi_terauchi:0 "寺内寿一"
@@ -104,7 +107,9 @@
  CHARACTER_keisuke_okada:0 "岡田啓介"
  CHARACTER_mineichi_koga:0 "古賀峯一"
  CHARACTER_mitsumasa_yonai:0 "米内光政"
+ CHARACTER_naokuni_nomura:0 "野村直邦"
  CHARACTER_osami_nagano:0 "永野修身"
+ CHARACTER_shigetaro_shimada:0 "嶋田繁太郎"
  CHARACTER_sokichi_takagi:0 "高木惣吉"
  
 #JOR-ヨルダン
